# pyhula-win11

./: .gitattributes  .gitmodules  Hula Python interface specifier V3_20250724.md  README.md  buildMavlinkDroneController.ps1
cpp-mavlink-controller/mavlink-drone-controller/: CMakeLists.txt  README.md
cpp-mavlink-controller/mavlink-drone-controller/src/: drone_controller.cpp  drone_controller.h  flight_mission.cpp  main.cpp  mavlink_handler.cpp  mavlink_handler.h  message_extractor.cpp  message_replay.cpp  raw_analyzer.cpp  simple_test.cpp  test_connection.cpp  test_tcp.cpp  working_replayer.cpp
cpp-mavlink-controller/mavlink-drone-controller/src/network/: tcp_client.cpp  tcp_client.h  udp_client.cpp  udp_client.h
cpp-mavlink-controller/mavlink-drone-controller/test/: testrunPSout.md
cpp-mavlink-controller/mavlink-drone-controller/wiresharkdump/: PScomandoutput_bytes.md  wiresharkMavlinkDump.csv  wiresharkMavlinkDump.txt  wiresharkMavlinkDump2.csv
cpp-mavlink-controller/mavlink-drone-controller/wiresharkdump/APPrun/: hulaApptesttimes.md  silentRunConnectedPS.c  silentRunConnectedPS.csv  silentRunConnectedPS.txt  silentRunnConnectionPS.pcapng  wiresharkFullAPPrun.csv
pyhula-1.1.4/: setup.py
pyhula-1.1.4/src/pyhula.egg-info/: PKG-INFO  SOURCES.txt
pyhula-1.1.4/src/pyhula/pypack/fylo/: config.cp313-win_amd64.pyd  mavanalyzer.c  mavlink.cp313-win_amd64.pyd  msganalyzer.c  msganalyzer.cp313-win_amd64.pyd  stateprocessor.cp313-win_amd64.pyd  taskprocessor.cp313-win_amd64.pyd
pyhula-1.1.4/src/pyhula/pypack/system/: communicationcontroller.cp313-win_amd64.pyd  dancecontroller.c  dancecontroller.cp313-win_amd64.pyd  dancefileanalyzer.c  datacenter.c  mavcrc.c  network.c  network.cp313-win_amd64.pyd  networkcontroller.c  serialcontroller.cp313-win_amd64.pyd  taskcontroller.c
pyhula-1.13.1/: BUILD_ANALYSIS.md  BUILD_README.md  FINAL_BUILD_ANALYSIS.md  PKG-INFO  README.md  build.bat  build.py  build_complete.py  build_direct.py  build_local.py  build_production.py  pyhula_py313.py  quick_setup.bat  setup.py  test_installation.py
pyhula-1.13.1/archive/: fix_windows_permissions.bat  fix_windows_permissions.ps1
pyhula-1.13.1/debug/: analyze_command_execution.py  diagnose_command_pipeline.py  diagnose_connection_issues.py  drone_diagnostic.py
pyhula-1.13.1/docs/: INSTALL.md  LICENSE  requirements.txt
pyhula-1.13.1/experimental/: fix_pyhula_connections.py  fix_pyhula_dll.py  fix_python313_and_test.py  fix_python313_compatibility.py  fix_python36.py  patch_pyhula_direct.py  pyhula_compatible.py  pyhula_connection_fix.py  pyhula_import.py  pyhula_py313_fix.py  pyhula_working_solution.py  safe_pyhula_connection.py  simple_pyhula_socket_fix.py  universal_pyhula_fix.py
pyhula-1.13.1/install_dependencies/: install_dependencies.bat  install_dependencies.py  install_dependencies.sh
pyhula-1.13.1/setup_complete/: README.md  setup_complete.bat  setup_complete.py  setup_complete.sh
pyhula-1.13.1/setup_quick/: setup_quick.bat  setup_quick.py  setup_quick.sh
pyhula-1.13.1/src/pyhula/: __init__.py
pyhula-1.13.1/src/pyhula.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pyhula-1.13.1/src/pyhula/pypack/: version.ini
pyhula-1.13.1/src/pyhula/pypack/fylo/: commandprocessor.c  commandprocessor.cp313-win_amd64.pyd  commandprocessor.cp37-win_amd64.pyd  config.cp313-win_amd64.pyd  config.cp37-win_amd64.pyd  controlserver.c  controlserver.cp313-win_amd64.pyd  controlserver.cp37-win_amd64.pyd  mavanalyzer.cp313-win_amd64.pyd  mavanalyzer.cp37-win_amd64.pyd  mavlink.cp313-win_amd64.pyd  mavlink.cp37-win_amd64.pyd  msganalyzer.cp313-win_amd64.pyd  msganalyzer.cp37-win_amd64.pyd  stateprocessor.c  stateprocessor.cp313-win_amd64.pyd  stateprocessor.cp37-win_amd64.pyd  taskprocessor.c  taskprocessor.cp313-win_amd64.pyd  taskprocessor.cp37-win_amd64.pyd  uwb.c  uwb.cp313-win_amd64.pyd  uwb.cp37-win_amd64.pyd
pyhula-1.13.1/src/pyhula/pypack/system/: buffer.c  buffer.cp313-win_amd64.pyd  buffer.cp37-win_amd64.pyd  command.c  command.cp313-win_amd64.pyd  command.cp37-win_amd64.pyd  communicationcontroller.c  communicationcontroller.cp313-win_amd64.pyd  communicationcontroller.cp37-win_amd64.pyd  communicationcontrollerfactory.c  communicationcontrollerfactory.cp313-win_amd64.pyd  communicationcontrollerfactory.cp37-win_amd64.pyd  dancecontroller.cp313-win_amd64.pyd  dancecontroller.cp37-win_amd64.pyd  dancefileanalyzer.cp313-win_amd64.pyd  dancefileanalyzer.cp37-win_amd64.pyd  datacenter.cp313-win_amd64.pyd  datacenter.cp37-win_amd64.pyd  event.c  event.cp313-win_amd64.pyd  event.cp37-win_amd64.pyd  mavcrc.cp313-win_amd64.pyd  mavcrc.cp37-win_amd64.pyd  network.cp313-win_amd64.pyd  network.cp37-win_amd64.pyd  networkcontroller.cp313-win_amd64.pyd  state.c  (+10 more)
pyhula-1.13.1/tests/: before_after_test.py  diagnostic.py  final_validation.py  hulatestjupiter.ipynb  minimal_test.py  pyhula_python313_example.py  simple_test.py  step_by_step_test.py  test_connection_fix.py  test_direct_pyhula.py  test_hanging_commands.py  test_installation.py  test_led_simple.py  test_pyhula_commands.py  test_pyhula_compatible.py  working_solution_test.py
pyhula-1.13.1/utils/: array_patch.py  build_pyhula.py  connection_diagnostic.py  example_usage.py  python313_compat.py  struct_patch.py
pyhula_src/: pyhula-1.1.4_unzipped.tar
python-installers/python-3135_installer/: Python-3.13.5.tgz
reverse-engineering/pyhula-wheel-analysis/pyhula-1.1.7-cp36-cp36m-win_amd64.whl_unzipped/pyhula/: userapi.py
reverse-engineering/pyhula-wheel-analysis/pyhula-1.1.7-cp36-cp36m-win_amd64.whl_unzipped/pyhula-1.1.7.dist-info/: METADATA  RECORD
wiresharkRec/UDPconectiontest/: UDPconectiontest.py  UDPtestcollection2.c  UDPtestcollection2.pcapng  UDPtestcollection2.txt
(+25 files in other folders)
